Big changes :boom:

--- a/templates/index.html
+++ b/templates/index.html
@@ -1,10 +1,10 @@
 <html>
   <body>
-    {%  %}
-    <form method="POST" action="/login">
-      <input type="hidden" name="username" value="user">
-      <input type="hidden" name="password" value="pass">
-      <button type="submit">Login</button>
-    </form>
+    Hello {{ user.name }}
+    {% for char in characters %}
+      <div>
+        <a href="/character/1">{{ char.name }}</a>
+      </div>
+    {% endfor %}
   </body>
 </html>
