Adding :knife: equipment! And characters

--- a/templates/index.html
+++ b/templates/index.html
@@ -1,4 +1,7 @@
 <html>
+  <head>
+    <title>Visual Character</title>
+  </head>
   <body>
     Hello {{ user.name }}
     {% for char in characters %}
