--- a/templates/character.html
+++ b/templates/character.html
@@ -9,7 +9,9 @@
         <div class="title">Equipment</div>
         <div class="sub-section">
           <div class="title">Owned Items</div>
-          <div class="item"></div>
+          {% for item in character.equipment %}
+            <div class="item">{{ item.name }}</div>
+          {% endfor %}
         </div>
       </div>
     </div>
