--- a/templates/index.html
+++ b/templates/index.html
@@ -6,7 +6,7 @@
     Hello {{ user.name }}
     {% for char in characters %}
       <div>
-        <a href="/character/1">{{ char.name }}</a>
+        <a href="/character/{{ char.id }}">{{ char.name }}</a>
       </div>
     {% endfor %}
   </body>
