--- a/templates/character.html
+++ b/templates/character.html
@@ -5,9 +5,6 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
     <style>
 
-
-
-
     BODY {
       color:#DDD;
       text-shadow:#000 0px 0px 5px;
@@ -85,8 +82,11 @@
       height: 24px;
       background-color: rgb(140, 217, 166);
     }
-    .stat.conditional {
+    .stat.condintional {
       background-color: rgb(159, 140, 217);
+    }
+    .stat.lowered {
+      background-color: rgb(217, 159, 140);
     }
     .stat-modifier {
       width:10%;
@@ -123,9 +123,7 @@
       <div class="name">{{ character.name }}</div>
 
       <div class="section">
-
         <div class="title">Main</div>
-
         {% if character.status_effects.length > 0 %}
         <div class="sub-section">
           <div class="title">Status Effects</div>
@@ -177,40 +175,22 @@
         <div class="title">Stats</div>
         <div class="sub-section">
           <div class="title">Primary Statistics</div>
+          {% macro primaryStatLine(name, stat) %}
           <div class="stat-line">
-            <div class="stat-name">Strength</div>
-            <div class="stat conditional">{{ character.stats.str }}</div>
-            <div class="stat-modifier">{{ character.mods("str") }}</div>
+            <div class="stat-name">{{ name }}</div>
+            <div class="stat {{ stat.status }}">{{ stat.sum() }}</div>
+            <div class="stat-modifier">{{ character.mods(stat.sum()) }}</div>
           </div>
-          <div class="stat-line">
-            <div class="stat-name">Dexterity</div>
-            <div class="stat">{{ character.stats.dex }}</div>
-            <div class="stat-modifier">{{ character.mods("dex") }}</div>
-          </div>
-          <div class="stat-line">
-            <div class="stat-name">Constitution</div>
-            <div class="stat">{{ character.stats.con }}</div>
-            <div class="stat-modifier">{{ character.mods("con") }}</div>
-          </div>
-          <div class="stat-line">
-            <div class="stat-name">Intelligence</div>
-            <div class="stat">{{ character.stats.int }}</div>
-            <div class="stat-modifier">{{ character.mods("int") }}</div>
-          </div>
-          <div class="stat-line">
-            <div class="stat-name">Wisdom</div>
-            <div class="stat">{{ character.stats.wis }}</div>
-            <div class="stat-modifier">{{ character.mods("wis") }}</div>
-          </div>
-          <div class="stat-line">
-            <div class="stat-name">Charisma</div>
-            <div class="stat">{{ character.stats.cha }}</div>
-            <div class="stat-modifier">{{ character.mods("cha") }}</div>
-          </div>
+          {% endmacro %}
+          {{ primaryStatLine('Strength', character.stats.str) }}
+          {{ primaryStatLine('Dexterity', character.stats.dex) }}
+          {{ primaryStatLine('Constitution', character.stats.con) }}
+          {{ primaryStatLine('Intelligence', character.stats.int) }}
+          {{ primaryStatLine('Wisdom', character.stats.wis) }}
+          {{ primaryStatLine('Charisma', character.stats.cha) }}
         </div>
         <div class="sub-section">
-
-
+          <div class="title">Primary Statistics</div>
           <div>
             <span>Light load</span>
             <span>{{ character.light_max }} lbs or less</span>
@@ -225,6 +205,20 @@
           </div>
         </div>
       </div>
-    </div>
+
+      <div class="section">
+        <div class="title">Debug</div>
+        <div class="sub-section">
+          <div class="title">All Stats</div>
+          {% for name, stat in character.stats %}
+          <div class="stat-line">
+            <div class="stat-name">{{ name }}</div>
+            <div class="stat {{ stat.status }}">{{ stat.sum() }}</div>
+          </div>
+          {% endfor %}
+        </div>
+      </div>
+
+    </div> <!-- end Character -->
   </body>
 </html>
