--- a/templates/character.html
+++ b/templates/character.html
@@ -154,7 +154,7 @@
             <div class="graph-section" id="light-load">
             </div>|<div class="graph-section" id="medium-load">
             </div>|<div class="graph-section" id="heavy-load"></div>
-            <div class="graph-indicator glyphicon glyphicon-triangle-top" id="indicator" style="left:{{ 100 * character.carry_weight / character.heavy_max }}%"></div>
+            <div class="graph-indicator glyphicon glyphicon-triangle-top" id="indicator" style="left:{{ character.current_load_percentage }}%"></div>
           </div>
         </div>
 
@@ -190,7 +190,7 @@
           {{ primaryStatLine('Charisma', character.stats.cha) }}
         </div>
         <div class="sub-section">
-          <div class="title">Primary Statistics</div>
+          <div class="title">Carry Capacity</div>
           <div>
             <span>Light load</span>
             <span>{{ character.light_max }} lbs or less</span>
