--- a/templates/character.html
+++ b/templates/character.html
@@ -13,6 +13,19 @@
       font-weight: 300;
       width:400px;
     }
+    .button {
+      background-color:rgba(200, 200, 200, 0.3);
+      padding: 4px;
+      border-radius: 4px;
+      cursor: pointer;
+      min-width: 48px;
+      text-align: center;
+    }
+    .button:hover {
+      background-color:rgba(200, 200, 200, 0.6);
+    }
+
+
     .character {
       padding: 8px;
       box-shadow: #000 0px 0px 20px;
@@ -36,12 +49,14 @@
 
 
 
+
     /* Carry capacity */
     #load-bar {
+      padding: 0px;
+      margin: 0px;
       width: 100%;
       height: 16px;
       position: relative;
-      padding-top: -6px;
       background: linear-gradient(
         to right,
         rgb(140, 217, 166),
@@ -59,7 +74,12 @@
       color:#FFF;
       position:absolute;
       margin-top:6px;
+      margin-left:-8px;
     }
+
+
+
+
 
 
     /* Stats */
@@ -115,6 +135,32 @@
 
 
 
+    /* Items */
+    .owned-item {
+      margin: 2px;
+      padding:2px;
+      background-color: rgba(100, 100, 100, 0.3);
+      border-radius: 6px;
+    }
+    .owned-item > div {
+      display: inline-block;
+    }
+    .owned-item .count {
+      width: 32px;
+      text-align:center;
+    }
+    .owned-item .name {
+      font-size: 110%;
+      width: 40%;
+    }
+    .owned-item .weight {
+      font-size: 90%;
+      width: 64px;
+      text-align:center;
+    }
+
+
+
 
     </style>
   </head>
@@ -161,10 +207,12 @@
         <div class="sub-section">
           <div class="title">Owned Items</div>
           {% for item in character.equipment %}
-            <div class="item">
-              <span>{{ item.count }}</span>
-              <span>{{ item.name }}</span>
-              <span>{{ item.weight }}</span>
+            <div class="owned-item">
+              <div class="count">{{ item.count }}</div>
+              <div class="name">{{ item.name }}</div>
+              <div class="weight">{{ item.weight }} lbs</div>
+              <div class="button">Drop</div>
+              <div class="button">Give</div>
             </div>
           {% endfor %}
         </div>
