--- a/templates/character.html
+++ b/templates/character.html
@@ -1,170 +1,6 @@
-<html>
-  <head>
-    <title>Visual Character</title>
-    <link href="https://fonts.googleapis.com/css?family=Roboto+Condensed" rel="stylesheet">
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
-    <style>
+{% extends 'default.html' %}
 
-    BODY {
-      color:#DDD;
-      text-shadow:#000 0px 0px 5px;
-      background-color: #333;
-      font-family: 'Roboto Condensed', sans-serif;
-      font-weight: 300;
-      width:400px;
-    }
-    .button {
-      background-color:rgba(200, 200, 200, 0.3);
-      padding: 4px;
-      border-radius: 4px;
-      cursor: pointer;
-      min-width: 48px;
-      text-align: center;
-    }
-    .button:hover {
-      background-color:rgba(200, 200, 200, 0.6);
-    }
-
-
-    .character {
-      padding: 8px;
-      box-shadow: #000 0px 0px 20px;
-    }
-    .character > .name {
-      font-size: 150%;
-    }
-    .section {
-      padding: 3px;
-      margin: 3px;
-      border: 1px solid rgba(100,100,100,0.3);
-    }
-    .section > .title {
-      background-color: rgba(100,100,150,0.3);
-    }
-    .sub-section > .title {
-      font-size: 120%;
-      background-color: rgba(0,0,20,0.1);
-      padding:6px;
-    }
-
-
-
-
-    /* Carry capacity */
-    #load-bar {
-      padding: 0px;
-      margin: 0px;
-      width: 100%;
-      height: 16px;
-      position: relative;
-      background: linear-gradient(
-        to right,
-        rgb(140, 217, 166),
-        rgb(217, 217, 140),
-        rgb(217, 159, 140)
-        );
-    }
-    #load-bar .graph-section {
-      width: 33.3%;
-      height: 100%;
-      display: inline-block;
-      margin: 0px;
-    }
-    #indicator {
-      color:#FFF;
-      position:absolute;
-      margin-top:6px;
-      margin-left:-8px;
-    }
-
-
-
-
-
-
-    /* Stats */
-    .stat-line > div {
-      display:inline-block;
-      vertical-align: middle;
-      margin-left: 32px;
-    }
-    .stat-name {
-      width:20%;
-    }
-    .stat {
-      color:#FFF;
-      text-shadow: #000 0px 0px 3px;
-      margin-top: 4px;
-      text-align:center;
-      border-radius: 12px;
-      font-size: 115%;
-      width: 24px;
-      height: 24px;
-      background-color: rgb(140, 217, 166);
-    }
-    .stat.condintional {
-      background-color: rgb(159, 140, 217);
-    }
-    .stat.lowered {
-      background-color: rgb(217, 159, 140);
-    }
-    .stat-modifier {
-      width:10%;
-      text-align: center;
-    }
-
-
-
-
-
-    /* Effects */
-    .status-effect {
-      padding: 8px;
-      background-color: rgba(204, 153, 255, 0.2);
-    }
-    .status-effect > .name {
-      display:inline-block;
-    }
-    .status-effect > .type {
-      background-color:#666;
-      color:#FFF;
-      border-radius: 8px;
-      padding: 3px;
-      float: right;
-    }
-
-
-
-    /* Items */
-    .owned-item {
-      margin: 2px;
-      padding:2px;
-      background-color: rgba(100, 100, 100, 0.3);
-      border-radius: 6px;
-    }
-    .owned-item > div {
-      display: inline-block;
-    }
-    .owned-item .count {
-      width: 32px;
-      text-align:center;
-    }
-    .owned-item .name {
-      font-size: 110%;
-      width: 40%;
-    }
-    .owned-item .weight {
-      font-size: 90%;
-      width: 64px;
-      text-align:center;
-    }
-
-
-
-
-    </style>
-  </head>
-  <body>
+{% block content %}
     <div class="character">
       <div class="name">{{ character.name }}</div>
 
@@ -182,7 +18,6 @@
         </div>
         {% endif %}
       </div>
-
 
 
       <div class="section">
@@ -268,5 +103,4 @@
       </div>
 
     </div> <!-- end Character -->
-  </body>
-</html>
+{% endblock %}
