--- a/templates/character/equipment.html
+++ b/templates/character/equipment.html
@@ -18,11 +18,11 @@
   <div class="sub-section">
     <div class="title">Owned Items</div>
     {% for item in character.equipment %}
-      <div class="owned-item">
+      <div class="owned-item" data-id="{{ item.id }}">
         <div class="count">{{ item.count }}</div>
         <div class="name">{{ item.name }}</div>
         <div class="weight">{{ item.weight }} lbs</div>
-        <div class="button">Drop</div>
+        <div class="button drop">Drop</div>
         <div class="button">Give</div>
       </div>
     {% endfor %}
