--- a/templates/default.html
+++ b/templates/default.html
@@ -7,5 +7,9 @@
   </head>
   <body>
     {% block content %}{% endblock %}
+    <div id="scripts">
+      <script src="https://code.jquery.com/jquery-3.1.0.min.js"></script>
+      <script src="/equipment.js"></script>
+    </div>
   </body>
 </html>
