Just an update with many changes - but nothing working... the one time tests might actually help :dog:

--- a/templates/character/equipment.html
+++ b/templates/character/equipment.html
@@ -4,8 +4,8 @@
     <div class="title">Carry Capacity</div>
     <div class="graph">
       <span>Carry weight: </span>
-      <span>{{ character.carry_weight }} lbs </span>
-      <span>({{ character.current_load }} load)</span>
+      <span class="stat-carry_weight">{{ character.carry_weight }}</span>
+      <span class="stat-current_load">{{ character.current_load }}</span>
     </div>
     <div class="graph" id="load-bar">
       <div class="graph-section" id="light-load">
