--- a/templates/default.html
+++ b/templates/default.html
@@ -2,11 +2,13 @@
   <head>
     <title>Visual Character</title>
     <link href="https://fonts.googleapis.com/css?family=Roboto+Condensed" rel="stylesheet">
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+    <!--<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">-->
     <link rel="stylesheet" href="/style.css">
   </head>
   <body>
+    <div id="page">
     {% block content %}{% endblock %}
+    </div>
     <div id="scripts">
       <script src="https://code.jquery.com/jquery-3.1.0.min.js"></script>
       <script src="/equipment.js"></script>
