--- a/templates/index.html
+++ b/templates/index.html
@@ -1,13 +1,10 @@
-<html>
-  <head>
-    <title>Visual Character</title>
-  </head>
-  <body>
-    Hello {{ user.name }}
-    {% for char in characters %}
-      <div>
-        <a href="/character/{{ char.id }}">{{ char.name }}</a>
-      </div>
-    {% endfor %}
-  </body>
-</html>
+{% extends 'default.html' %}
+
+{% block content %}
+  Hello {{ user.name }}
+  {% for char in characters %}
+    <div>
+      <a href="/character/{{ char.id }}">{{ char.name }}</a>
+    </div>
+  {% endfor %}
+{% endblock %}
