--- a/templates/login.html
+++ b/templates/login.html
@@ -1,9 +1,9 @@
-<html>
-  <body>
-    <form method="POST" action="/login">
-      <input type="hidden" name="username" value="user">
-      <input type="hidden" name="password" value="pass">
-      <button type="submit">Login</button>
-    </form>
-  </body>
-</html>
+{% extends 'default.html' %}
+
+{% block content %}
+  <form method="POST" action="/login">
+    <input type="hidden" name="username" value="user">
+    <input type="hidden" name="password" value="pass">
+    <button type="submit">Login</button>
+  </form>
+{% endblock %}
