Loading in pages depending on selected header

--- a/templates/character/statistics.html
+++ b/templates/character/statistics.html
@@ -1,5 +1,5 @@
 <div class="section">
-  <div class="title">Stats</div>
+  <div class="title">Statistics</div>
   <div class="sub-section">
     <div class="title">Primary Statistics</div>
     {% macro primaryStatLine(name, stat) %}
