--- a/public/style.css
+++ b/public/style.css
@@ -1,8 +1,14 @@
+
+
 BODY {
   color:#DDD;
   text-shadow:#000 0px 0px 5px;
   background-color: #333;
   font-family: 'Roboto Condensed', sans-serif;
+  font-weight: 300;
+  margin:0px;
+  padding:0px;
+  font-size: 20pt;
   font-weight: 300;
 }
 .button {
@@ -19,6 +25,40 @@ BODY {
 .button:active {
   background-color:rgba(0, 0, 0, 0.6);
 }
+
+
+
+
+#nav {
+  table-layout: fixed;
+  display: table;
+  width:100%;
+}
+#nav > div {
+  display: table-cell;
+  height:32px;
+  text-align: center;
+
+  cursor:pointer;
+  color:#FFF;
+  background-color: rgb(80, 103, 149);
+}
+#nav > div:hover {
+  background-color: rgb(122, 143, 184);
+}
+#nav > div.active {
+  background-color: rgba(80, 103, 149, 0.5);
+}
+
+#header {
+  width:100%;
+  font-size:90%;
+  text-align:center;
+}
+
+
+
+
 
 
 
@@ -55,7 +95,7 @@ BODY {
   padding: 0px;
   margin: 0px;
   width: 100%;
-  height: 16px;
+  height: 32px;
   position: relative;
   background: linear-gradient(
     to right,
@@ -98,10 +138,11 @@ BODY {
   text-shadow: #000 0px 0px 3px;
   margin-top: 4px;
   text-align:center;
-  border-radius: 12px;
+  border-radius: 42px;
   font-size: 115%;
-  width: 24px;
-  height: 24px;
+  padding-top:4px;
+  width: 42px;
+  height: 42px;
   background-color: rgb(140, 217, 166);
 }
 .stat.condintional {
