--- a/templates/character/main.html
+++ b/templates/character/main.html
@@ -1,5 +1,5 @@
 <div class="section">
-  <div class="title">Main</div>
+  <div class="title">Overworld</div>
   {% if character.status_effects.length > 0 %}
   <div class="sub-section">
     <div class="title">Status Effects</div>
