--- a/templates/character/index.html
+++ b/templates/character/index.html
@@ -2,12 +2,12 @@
 
 {% block content %}
   <div id="nav">
-    <div id="overworld">O</div>
-    <div id="combat">X</div>
-    <div id="magic">m</div>
-    <div id="equipment">e</div>
-    <div id="statistics">?</div>
-    <div id="debug">d</div>
+    <div id="overworld"></div>
+    <div id="combat"></div>
+    <div id="magic"></div>
+    <div id="equipment"></div>
+    <div id="statistics"></div>
+    <div id="debug"></div>
   </div>
   <div id="header">{{ title }}</div>
   <div id="content"></div>
