Moved scripts to right folder

--- a/templates/default.html
+++ b/templates/default.html
@@ -11,6 +11,7 @@
     </div>
     <div id="scripts">
       <script src="https://code.jquery.com/jquery-3.1.0.min.js"></script>
+      <script src="/character.js"></script>
       <script src="/equipment.js"></script>
     </div>
   </body>
