--- a/templates/character/equipment.html
+++ b/templates/character/equipment.html
@@ -8,8 +8,8 @@
   </div>
   <div class="graph" id="load-bar">
     <div class="graph-section" id="light-load">
-    </div>|<div class="graph-section" id="medium-load">
-    </div>|<div class="graph-section" id="heavy-load"></div>
+    </div><div class="graph-section" id="medium-load">
+    </div>
     <div class="graph-indicator" id="indicator" style="left:{{ character.current_load_percentage }}%">v</div>
   </div>
 </div>
@@ -25,3 +25,5 @@
     </div>
   {% endfor %}
 </div>
+
+<script src="/equipment.js"></script>
