--- a/templates/character/index.html
+++ b/templates/character/index.html
@@ -12,3 +12,8 @@
   <div id="header">{{ title }}</div>
   <div id="content"></div>
 {% endblock %}
+
+{% block scripts %}
+  {{ super() }}
+  <script src="/character.js"></script>
+{% endblock %}
