--- a/templates/default.html
+++ b/templates/default.html
@@ -10,9 +10,10 @@
     {% block content %}{% endblock %}
     </div>
     <div id="scripts">
-      <script src="https://code.jquery.com/jquery-3.1.0.min.js"></script>
-      <script src="/character.js"></script>
-      <script src="/equipment.js"></script>
+      {% block scripts %}
+        <script src="https://code.jquery.com/jquery-3.1.0.min.js"></script>
+        <script src="/core.js"></script>
+      {% endblock %}
     </div>
   </body>
 </html>
