--- a/templates/default.html
+++ b/templates/default.html
@@ -9,6 +9,9 @@
     <div id="page">
     {% block content %}{% endblock %}
     </div>
+    <div id="overlay">
+      <div id="window">This is window content</div>
+    </div>
     <div id="scripts">
       {% block scripts %}
         <script src="https://code.jquery.com/jquery-3.1.0.min.js"></script>
