--- a/templates/character/equipment.html
+++ b/templates/character/equipment.html
@@ -1,4 +1,20 @@
 
+
+<div class="sub-section">
+  <div class="title">
+    <span>Owned Items</span>
+    <div class="add-button" id="add-item">+</div>
+  </div>
+  {% for item in character.equipment %}
+    <div class="owned-item" data-id="{{ item.id }}">
+      <div class="count">{{ item.count }}</div>
+      <div class="name">{{ item.name }}</div>
+      <div class="weight">{{ item.weight }} lbs</div>
+      <div class="button drop">Drop</div>
+    </div>
+  {% endfor %}
+</div>
+
 <div class="sub-section">
   <div class="title">Carry Capacity</div>
   <div class="graph">
@@ -14,16 +30,5 @@
   </div>
 </div>
 
-<div class="sub-section">
-  <div class="title">Owned Items</div>
-  {% for item in character.equipment %}
-    <div class="owned-item" data-id="{{ item.id }}">
-      <div class="count">{{ item.count }}</div>
-      <div class="name">{{ item.name }}</div>
-      <div class="weight">{{ item.weight }} lbs</div>
-      <div class="button drop">Drop</div>
-    </div>
-  {% endfor %}
-</div>
 
 <script src="/equipment.js"></script>
