--- a/templates/default.html
+++ b/templates/default.html
@@ -11,6 +11,7 @@
     </div>
     <div id="overlay">
       <div id="window">This is window content</div>
+      <div id="close" class="button">close</div>
     </div>
     <div id="scripts">
       {% block scripts %}
