Doesn't work 100% yet, but many changes to the add equipment functionality

--- a/templates/equipment/index.html
+++ b/templates/equipment/index.html
@@ -5,7 +5,7 @@
 {% block content %}
 
   {% for equipment in equipmentTypes %}
-    <div class="add-equipment">{{ equipment.name }}</div>
+    <a href="#" data-name="{{ equipment.name }}" class="add-equipment">{{ equipment.name }}</a><br/>
   {% endfor %}
 
 {% endblock %}
