--- a/public/style.css
+++ b/public/style.css
@@ -46,6 +46,14 @@ BODY {
 }
 
 
+.flash {
+  background-color: rgba(255,255,150, 0.8);
+  transition-duration: 0.5s;
+}
+
+
+
+
 #overlay {
   position:absolute;
   top:0px;
