--- a/templates/character/equipment.html
+++ b/templates/character/equipment.html
@@ -5,14 +5,11 @@
     <span>Owned Items</span>
     <div class="add-button" id="add-item">+</div>
   </div>
+  <div id="item-list">
   {% for item in character.equipment %}
-    <div class="owned-item" data-id="{{ item.id }}">
-      <div class="count">{{ item.count }}</div>
-      <div class="name">{{ item.name }}</div>
-      <div class="weight">{{ item.weight }} lbs</div>
-      <div class="button drop">Drop</div>
-    </div>
+    {% include '../equipment/item.partial.html' %}
   {% endfor %}
+  </div>
 </div>
 
 <div class="sub-section">
