--- a/templates/equipment/item.partial.html
+++ b/templates/equipment/item.partial.html
@@ -1,4 +1,7 @@
-<div class="owned-item" data-id="{{ item.id }}">
+<div
+  id="item-{{ item.id }}"
+  class="owned-item {% if flash %}flash{% endif %}"
+  data-id="{{ item.id }}">
   <div class="count">{{ item.count }}</div>
   <div class="name">{{ item.name }}</div>
   <div class="weight">{{ item.weight }} lbs</div>
