--- a/templates/equipment/item.partial.html
+++ b/templates/equipment/item.partial.html
@@ -1,9 +1,10 @@
 <div
   id="item-{{ item.id }}"
-  class="owned-item {% if flash %}flash{% endif %}"
-  data-id="{{ item.id }}">
+  class="owned-item {% if flash %}flash{% endif %}">
   <div class="count">{{ item.count }}</div>
   <div class="name">{{ item.name }}</div>
   <div class="weight">{{ item.weight }} lbs</div>
-  <div class="button drop">Drop</div>
+  <div class="actions" data-id="{{ item.id }}">
+    <div class="button drop">Drop</div>
+  </div>
 </div>
