Use title instead of name for link

--- a/templates/equipment/index.html
+++ b/templates/equipment/index.html
@@ -10,7 +10,8 @@
       <div class="name">{{ equipment.name }}</div>
       <div class="cost">{{ equipment.cost }}</div>
       <div class="actions"
-        data-name="{{ equipment.name}}">
+        data-name="{{ equipment.name }}"
+        data-title="{{ equipment.title }}">
         <div class="add-equipment add-button">+</div>
         <div class="info-equipment info-button">&gt;</div>
       </div>
