--- a/templates/equipment/index.html
+++ b/templates/equipment/index.html
@@ -9,6 +9,7 @@
     <div class="item">
       <div class="name">{{ equipment.name }}</div>
       <div class="cost">{{ equipment.cost }}</div>
+      <div class="type">{{ equipment.type }}</div>
       <div class="actions"
         data-name="{{ equipment.name }}"
         data-title="{{ equipment.title }}">
