Closes #34 - Add cost translation

--- a/templates/equipment/detail.html
+++ b/templates/equipment/detail.html
@@ -11,7 +11,7 @@
       <span class="error">No description</span>
     {% endif %}
   </div>
-  <div class="cost">{{ item.cost }}</div>
+  <div class="cost">{{ item.converted_cost }}</div>
   <div class="actions">
     {% if owned %}
       <div class="button">Drop</div>
