--- a/templates/equipment/detail.html
+++ b/templates/equipment/detail.html
@@ -1,6 +1,6 @@
 {% extends '../overlay.html' %}
 
-{% block title %}{{ item.name }}{% endblock%}
+{% block title %}{{ item.heading }}{% endblock%}
 
 {% block content %}
   <div class="attacks"></div>
@@ -15,11 +15,11 @@
   <div class="actions">
     {% if owned %}
       <div class="button">Drop</div>
-      <div class="button">Give</div>
+      <!-- <div class="button">Give</div> -->
     {% else %}
       <div class="button">Add</div>
-      <div class="button">Buy</div>
-      <div class="button">Customize</div>
+      <!-- <div class="button">Buy</div> -->
+      <!-- <div class="button">Customize</div> -->
     {% endif %}
   </div>
 {% endblock %}
