--- a/templates/equipment/item.partial.html
+++ b/templates/equipment/item.partial.html
@@ -6,7 +6,5 @@
   <div class="count">{{ item.count }}</div>
   <div class="name">{{ item.name }}</div>
   <div class="weight">{{ item.weight }} lbs</div>
-  <div class="actions">
-    <div class="button drop">Drop</div>
-  </div>
+  <div class="button view">View</div>
 </div>
