Adding categories for items

--- a/assets/style/visual.less
+++ b/assets/style/visual.less
@@ -355,7 +355,14 @@ BODY {
 #overlay .item .actions {
   text-align: right;
 }
-
+#overlay .item-type {
+  text-transform: capitalize;
+  cursor: pointer;
+  padding: 3px;
+}
+#overlay .item-type:hover {
+  background-color: rgba( 255, 255, 255, 0.1)
+}
 
 
 
