--- a/assets/style/visual.less
+++ b/assets/style/visual.less
@@ -1,370 +1,9 @@
 
-
-BODY {
-  color:#DDD;
-  text-shadow:#000 0px 0px 5px;
-  background-color: #333;
-  font-family: 'Roboto Condensed', sans-serif;
-  font-weight: 300;
-  margin:0px;
-  padding:0px;
-  font-size: 20pt;
-  font-weight: 300;
-}
-.button {
-  background-color:rgb(60, 60, 60);
-  padding: 4px;
-  margin: 4px;
-  border-radius: 4px;
-  cursor: pointer;
-  min-width: 48px;
-  text-align: center;
-}
-.button:hover {
-  background-color:rgb(120, 120, 130);
-}
-.button:active {
-  background-color:rgb(35, 35, 30);
-}
-
-.add-button {
-  color:#FFF;
-  text-shadow: #000 0px 0px 3px;
-  text-align:center;
-  border-radius: 42px;
-  font-size: 110%;
-  width: 42px;
-  height: 42px;
-  background-color: rgb(140, 217, 166);
-  cursor: pointer;
-}
-.add-button:hover {
-  background-color: rgb(160, 237, 186);
-}
-.add-button:active {
-  background-color: rgb(110, 187, 136);
-}
-.info-button {
-  color:#FFF;
-  text-shadow: #000 0px 0px 3px;
-  text-align:center;
-  border-radius: 42px;
-  font-size: 110%;
-  width: 42px;
-  height: 42px;
-  background-color: rgb(140, 166, 217);
-  cursor: pointer;
-}
-
-.error {
-  color:#C66;
-}
-
-
-
-
-
-
-
-
-#overlay {
-  position:absolute;
-  top:0px;
-  left:0px;
-  background-color: rgba(0, 0, 0, 0.65);
-  width:100%;
-  height:100%;
-  display:none;
-}
-#overlay #window {
-  width:80%;
-  position:relative;
-  box-shadow: #000 0px 0px 20px;
-  margin-left: 10%;
-  margin-top: 10%;
-  padding:0px;
-  height: 70%;
-  background-color: rgb(80, 103, 149);
-}
-#overlay #title {
-  height:10%;
-  background-color: rgba(0, 0, 0, 0.3);
-  font-weight: bold;
-  font-size: 110%;
-}
-#overlay #content {
-  height:90%;
-  width: 100%;
-  overflow-y: scroll;
-}
-#overlay #close {
-  width:20%;
-  margin: 10px auto;
-}
-
-
-
-
-
-
-
-#nav {
-  table-layout: fixed;
-  display: table;
-  width:100%;
-}
-#nav > div {
-  display: table-cell;
-  height:86px;
-  text-align: center;
-
-  cursor:pointer;
-  color:#FFF;
-  background-color: rgb(80, 103, 149);
-  background-repeat: no-repeat;
-  background-position: 50% 50%;
-  transition-duration: 0.5s;
-}
-#nav > div:hover {
-  background-color: rgb(122, 143, 184);
-}
-#nav > div.active {
-  /*background-color: rgba(80, 103, 149, 0.5);*/
-  background-color: transparent;
-  box-shadow: inset rgba(0,0,0, 0.5) 0px 20px 20px;
-}
-
-#nav > #overworld { background-image: url('icons/overworld.png'); }
-#nav > #combat { background-image: url('icons/combat.png'); }
-#nav > #magic { background-image: url('icons/magic.png'); }
-#nav > #equipment { background-image: url('icons/equipment.png'); }
-#nav > #statistics { background-image: url('icons/statistics.png'); }
-#nav > #debug { background-image: url('icons/debug.png'); }
-
-
-#header {
-  width:100%;
-  font-size:90%;
-  text-align:center;
-  padding: 16px;
-}
-
-
-
-
-
-
-
-
-
-
-
-.character {
-  padding: 8px;
-  box-shadow: #000 0px 0px 20px;
-}
-.character > .name {
-  font-size: 150%;
-}
-.section {
-  padding: 3px;
-  margin: 3px;
-  border: 1px solid rgba(100,100,100,0.3);
-}
-.section > .title {
-  background-color: rgba(100,100,150,0.3);
-}
-.title .add-button {
-  float:right;
-}
-
-
-.sub-section > .title {
-  font-size: 120%;
-  background-color: rgba(0,0,20,0.1);
-  padding:6px;
-}
-
-
-
-
-/* Carry capacity */
-#load-bar {
-  padding: 0px;
-  margin: 0px;
-  width: 100%;
-  height: 32px;
-  position: relative;
-  background: linear-gradient(
-    to right,
-    rgb(140, 217, 166),
-    rgb(217, 217, 140),
-    rgb(217, 159, 140)
-    );
-}
-#load-bar .graph-section {
-  width: 33.3%;
-  height: 100%;
-  display: inline-block;
-  margin: 0px;
-  border-right: solid 1px #FFF;
-}
-#indicator {
-  color:#FFF;
-  position:absolute;
-  top:0px;
-  margin-left:-8px;
-
-  /* Animate shit */
-  transition-duration: 1s;
-}
-
-
-
-
-
-
-
-
-
-
-/* Stats */
-.stat-line > div {
-  display:inline-block;
-  vertical-align: middle;
-  margin-left: 32px;
-}
-.stat-name {
-  width:20%;
-}
-.stat {
-  color:#FFF;
-  text-shadow: #000 0px 0px 3px;
-  margin-top: 4px;
-  text-align:center;
-  border-radius: 42px;
-  font-size: 115%;
-  padding-top:4px;
-  width: 42px;
-  height: 42px;
-  background-color: rgb(140, 217, 166);
-  cursor: pointer;
-}
-.stat:hover {
-  background-color: rgb(150, 227, 176);
-}
-.stat:active {
-  background-color: rgba(150, 227, 176, 0.5);
-}
-
-.stat.conditional {
-  background-color: rgb(159, 140, 217);
-}
-.stat.lowered {
-  background-color: rgb(217, 159, 140);
-}
-.stat-modifier {
-  width:10%;
-  text-align: center;
-}
-
-
-
-
-
-
-
-
-
-
-/* Effects */
-.status-effect {
-  padding: 8px;
-  background-color: rgba(204, 153, 255, 0.2);
-}
-.status-effect > .name {
-  display:inline-block;
-}
-.status-effect > .type {
-  background-color:#666;
-  color:#FFF;
-  border-radius: 8px;
-  padding: 3px;
-  float: right;
-}
-
-
-
-
-
-
-/* Items */
-#item-list {
-  display:table;
-  width:100%;
-}
-.owned-item {
-  display: table-row;
-  margin: 2px;
-  padding:2px;
-  background-color: rgba(100, 100, 100, 0.3);
-  border-radius: 6px;
-}
-.owned-item > div {
-  display: table-cell;
-}
-.owned-item .count {
-  text-align:center;
-}
-.owned-item .name {
-  font-size: 110%;
-  cursor: pointer;
-}
-.owned-item .name:hover {
-  background-color: rgba(255,255,255, 0.1);
-}
-.owned-item .weight {
-  font-size: 90%;
-  text-align: right;
-}
-
-
-
-
-
-/* Equipment dialog */
-#overlay .item .actions > div {
-  width: 32px;
-  height:32px;
-  display:inline-block;
-}
-#overlay .item-list {
-  display:table;
-  width: 100%;
-}
-#overlay .item {
-  display:table-row;
-  margin: 4px;
-  width: 100%;
-}
-#overlay .item > div {
-  display:table-cell;
-  padding:8px;
-  padding-bottom:0px;
-}
-#overlay .item .actions {
-  text-align: right;
-}
-#overlay .item-type {
-  text-transform: capitalize;
-  cursor: pointer;
-  padding: 3px;
-}
-#overlay .item-type:hover {
-  background-color: rgba( 255, 255, 255, 0.1)
-}
-
-
+@import 'character.less';
+@import 'core.less';
+@import 'equipment.less';
+@import 'overlay.less';
+@import 'stats.less';
 
 /* Important */
 .flash {
